kustomize/environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
  name: blog-apex
spec:
  rules:
  - host: coreyburmeister.com
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: http
        path: /
  tls:
  - hosts:
    - coreyburmeister.com
    secretName: blog-apex-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
  name: blog-www
spec:
  rules:
  - host: www.coreyburmeister.com
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: http
        path: /
  tls:
  - hosts:
    - www.coreyburmeister.com
    secretName: blog-www-tls
